⚙️ Deploy configuration: D1 database + Cloudflare setup
- Novo database ID: 4a6b8c64-86ab-4e50-badc-50a745456f4d
- Build sem TypeScript check (runtime funciona)
- Removido R2 bucket (requer habilitação no dashboard)
- Migra\u00e7\u00f5es aplicadas com sucesso
- Deploy: https://salva-iguaba.xerifegomes-e71.workers.dev

--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -2,11 +2,13 @@
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": ["vite/client", "./worker-configuration.d.ts"],
+    "types": ["@cloudflare/workers-types", "./worker-configuration.d.ts"],
+    "lib": ["ESNext"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "skipLibCheck": true
   },
-  "include": ["src/worker"]
+  "include": ["src/worker", "src/shared"]
 }
