--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "wrangler": "^4.42.0"
   },
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "build:check": "tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "check": "tsc && vite build && wrangler deploy --dry-run",
     "dev": "vite",
